--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,28 @@ code {
 .text-center {
   text-align: center;
 }
+
+input:focus,
+textarea:focus {
+  outline: none;
+}
+
+.middle-margin {
+  margin:5px;
+}
+
+input::-webkit-input-placeholder {
+  font-family: 'Dancing Script', cursive;
+  font-size: 20px;
+}
+textarea::-webkit-input-placeholder {
+  font-family: 'Dancing Script', cursive;
+  font-size: 15px;
+}
+input:-moz-placeholder {
+  font-family: 'Dancing Script', cursive;
+}
+textarea::-moz-placeholder {
+  font-family: 'Dancing Script', cursive;
+  font-size: 15px;
+}
